--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,15 +1,15 @@
 backend:
   name: git-gateway
-  branch: main  # Replace with your branch name if different
+  branch: main # The branch where content changes are saved
 
-media_folder: "images/uploads"  # Folder for uploaded media
+media_folder: "images/uploads" # Path to store images
 public_folder: "/images/uploads"
 
 collections:
   - name: "blog"
     label: "Blog"
-    folder: "_posts"  # Where posts will be stored
-    create: true
+    folder: "blog" # Folder to store blog posts
+    create: true # Allow creating new posts
     fields:
       - { name: "title", label: "Title", widget: "string" }
       - { name: "date", label: "Date", widget: "datetime" }
