--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,9 +1,11 @@
 backend:
-  name: github
-  repo: <non-disclosed-CHP>/<repo2>  # Replace with your GitHub username and repo name
-  branch: main  # Replace with the branch you use (default: 'main')
-media_folder: "static/media"  # Folder where media files will be stored
-public_folder: "/media"  # The URL path to access media files
+  name: git-gateway
+  branch: main  # or your default branch
+  repo: non-disclosed-CHP/repo2  # Use your actual GitHub username and repo name
+
+media_folder: "static/uploads"
+public_folder: "/uploads"
+
 collections:
   - name: "blog"
     label: "Blog Posts"
@@ -12,5 +14,4 @@ collections:
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
     fields:
       - { label: "Title", name: "title", widget: "string" }
-      - { label: "Body", name: "body", widget: "text" }
-      - { label: "Publish Date", name: "date", widget: "datetime" }
+      - { label: "Body", name: "body", widget: "markdown" }
